--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -112,4 +112,60 @@
         flex-direction: column;
         justify-content: space-between;
     }
+    /* contact */
+    .contact {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+    .contact>h1 {
+        width: 327px;
+        height: 162px;
+        font-weight: bold;
+        font-size: 36px;
+        line-height: 150%;
+        /* or 54px */
+        color: #FFFFFF;
+    }
+    /* footer */
+    .footer {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-self: center;
+        flex-direction: column;
+    }
+    .footer_icon {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+    }
+    .footer_menu>ul {
+        list-style-type: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        margin: 0;
+    }
+    .footer_menu a {
+        text-decoration: none;
+        font-size: 1.8rem;
+        line-height: 25px;
+        /* identical to box height */
+        text-align: center;
+        color: rgba(255, 255, 255, 0.7);
+        margin-top: 50px;
+    }
+    .footer_copyright>p {
+        font-size: 16px;
+        line-height: 38px;
+        /* identical to box height, or 237% */
+        text-align: center;
+        letter-spacing: -0.500211px;
+        color: rgba(255, 255, 255, 0.7);
+    }
 }
